@@ -41,6 +41,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         HP-UX before 10.20, IRIX, {OSF/1, Digital Unix, Tru64 Unix}, SINIX,
         SunOS 3.x, 4.x and 5.x before 5.3.2, and Ultrix.
       Add a new test program for pcap_activate().
+    Haiku:
+      Report non-existent devices correctly.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 1.10.5 libpcap release (so far!)
